# ciphera-demo

./: .gitignore  Makefile  README.md
parachain/: Cargo.toml  network.toml  rustfmt.toml
parachain/contracts/demo_ciphera/: Cargo.toml  lib.rs  rust-toolchain.toml
parachain/contracts/demo_ciphera/access_control/: Cargo.toml  lib.rs
parachain/contracts/demo_ciphera/scripts/: build-all-pop.sh  build-all.sh  e2e_test.sh
parachain/contracts/demo_ciphera/tests/: demo_ciphera_test.rs  e2e_demo_test.rs
parachain/contracts/demo_ciphera/wasm/: demo_ciphera.contract
parachain/node/: Cargo.toml
parachain/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
parachain/runtime/: Cargo.toml
parachain/runtime/src/: lib.rs
parachain/zombienet/: config.toml  spawn.sh
parachain/zombienet/ciphera-demo/2111/: genesis-wasm
parachain/zombienet/scripts-demo/: ciphera-chainspec.sh  ciphera-collator-01.sh  clear_db.sh  genkey.sh  init.sh  kill-network-demo.sh  launch-network-demo.sh  polkadot-alice.sh  polkadot-bob.sh  polkadot-chaispec.sh  tail-logs.sh  variables.sh
parachain/zombienet/zombienet-demo/: 2111-rococo-local-plain.json  2111-rococo-local.json  alice.yaml  bob.yaml  ciphera-collator1.yaml  namespace  temp-1.yaml  temp-2.yaml  temp-3.yaml  temp-collator.yaml  temp.yaml  zombie.json
parachain/zombienet/zombienet-demo/bob/cfg/: zombie-wrapper.sh
parachain/zombienet/zombienet-demo/cfg/: genesis-state-2111  rococo-local-plain.json  undefined-plain.json
parachain/zombienet/zombienet-demo/ciphera-collator1/cfg/: rococo-local-2111.json
(+2 files in other folders)
