[package]
name = "access_control"
version = "0.1.0"
authors = ["Nhi Tran tranthiainhi303@gmail.com"]
edition = "2021"

[dependencies]
ink = { version = "5.1.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std"]
ink-as-dependency = []
e2e-tests = []
